--- a/config.toml
+++ b/config.toml
@@ -1,136 +1,148 @@
-baseURL = "https://example.com"
-title   = "Hadi Azarnasab"
+baseURL = "https://hadi7546.me"
 languageCode = "en-us"
 theme = "hello-friend-ng"
+title = "Hadi Azarnasab"
 
 PygmentsCodeFences = true
 PygmentsStyle = "monokai"
 
-paginate  = 10
-rssLimit  = 10  
 copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License." # This message is only used by the RSS template.
+paginate = 10 
+rssLimit = 10 
 
 # googleAnalytics = ""
-# disqusShortname = ""
+disqusShortname = "hadi7546"
 
 archetypeDir = "archetypes"
-contentDir   = "content"
-dataDir      = "data"
-layoutDir    = "layouts"
-publishDir   = "public"
+contentDir = "content"
+dataDir = "data"
+layoutDir = "layouts"
+publishDir = "public"
 
-buildDrafts  = false
-buildFuture  = false
+buildDrafts = false
 buildExpired = false
+buildFuture = false
 canonifyURLs = true
 
-enableRobotsTXT = true
-enableGitInfo   = false
-enableEmoji     = true
-enableMissingTranslationPlaceholders = false
-disableRSS     = false
-disableSitemap = false
-disable404     = false
+disable404 = false
 disableHugoGeneratorInject = false
-
-[permalinks]
-  posts = "/posts/:year/:month/:title/"
+disableRSS = true
+disableSitemap = false
+enableEmoji = true
+enableGitInfo = false
+enableMissingTranslationPlaceholders = false
+enableRobotsTXT = true
 
 [author]
-  name = "Hadi Azarnasab"
+name = "Hadi Azarnasab"
 
 [blackfriday]
-  hrefTargetBlank = true
+hrefTargetBlank = true
 
 [taxonomies]
-  tag      = "tags"
-  category = "categories"
-  series   = "series"
+category = "categories"
+series = "series"
+tag = "tags"
 
 [params]
-  dateform        = "Jan 2, 2006"
-  dateformShort   = "Jan 2"
-  dateformNum     = "2006-01-02"
-  dateformNumTime = "2006-01-02 15:04"
+dateform = "Jan 2, 2006"
+dateformNum = "2006-01-02"
+dateformNumTime = "2006-01-02 15:04"
+dateformShort = "Jan 2"
 
-  # Metadata mostly used in document's head
-  # 
-  description = "Hadi Azarnasab Personal Website"
-  keywords = "Hadi, Hadi7546, HadiAzarnasab"
-  images = ["images/Hadi-new.png"]
+# Metadata mostly used in document's head
+# 
+description = "Hadi Azarnasab Personal Website"
+images = ["images/hadi-latest.png"]
+keywords = "Hadi, Hadi7546, HadiAzarnasab"
 
-  homeSubtitle = "A 14 Y/O Student | Flutter & GoLang Developer | Astronomy & Physics Lover"
+homeSubtitle = "A 16 Y/O Student | Flutter & GoLang Developer | Astronomy & Physics & AI/ML Lover"
 
+disableReadOtherPosts = false
+enableGlobalLanguageMenu = false
+enableSharingButtons = true
+enableThemeToggle = true
 
-  disableReadOtherPosts = false
-  enableThemeToggle = true
-  enableSharingButtons = true
-  enableGlobalLanguageMenu = false
+customCSS = []
+customJS = []
 
-  customCSS = []
-  customJS  = []
+justifyContent = false
+[params.commento]
+url = ""
 
-  justifyContent = false  
+[params.footer]
+author = true
+copyright = false
+rss = true
+trademark = true
 
-  [params.footer]
-    trademark = true
-    rss = false
-    copyright = false
-    author = true
+bottomText = []
+topText = []
 
-    topText = []
-    bottomText = []
+[params.favicon.color]
+mask = "#1b1c1d"
+msapplication = "#1b1c1d"
+theme = "#1b1c1d"
 
-  [params.favicon.color]
-    mask = "#1b1c1d"
-    msapplication = "#1b1c1d"
-    theme = "#1b1c1d"
+[params.logo]
+logoCursorDisabled = true
+logoHomeLink = "/"
+logoMark = " "
+logoText = "Hadi7546"
 
-  [params.logo]
-    logoMark     = " "
-    logoText     = "Hadi7546"
-    logoHomeLink = "/"
-    logoCursorDisabled = true
+[params.portrait]
+alt = "Portrait"
+path = "images/hadi-latest-cropped.png"
 
-  [params.portrait]
-    path     = "images/Hadi-new.png"
-    alt      = "Portrait"
+[[params.social]]
+name = "twitter"
+url = "social/twitter"
 
-  [[params.social]]
-    name = "twitter"
-    url  = "https://social.hadi7546.me/twitter"
+[[params.social]]
+name = "github"
+url = "social/github"
 
-  [[params.social]]
-    name = "github"
-    url  = "https://social.hadi7546.me/github"
+[[params.social]]
 
-  [[params.social]]
-    name = "linkedin"
-    url  = "https://social.hadi7546.me/linkedin"
-  
-  [[params.social]]
-    name = "telegram"
-    url  = "https://social.hadi7546.me/telegram"
+name = "linkedin"
+url = "/social/linkedin"
 
-  [[params.social]]
-    name = "discord"
-    url  = "https://social.hadi7546.me/discord"
+[[params.social]]
+name = "telegram"
+url = "social/telegram"
 
-  [[params.social]]
-    name = "spotify"
-    url  = "https://social.hadi7546.me/spotify"
- 
-  [[params.social]]
-    name = "email"
-    url  = "mailto:hi@hadi7546.me"
+[[params.social]]
+name = "discord"
+url = "social/discord"
 
+[[params.social]]
+name = "spotify"
+url = "social/spotify"
+
+[[params.social]]
+name = "monkeytype"
+url = "social/monkeytype"
+
+[[params.social]]
+name = "mastodon"
+url = "social/mastodon"
+
+[[params.social]]
+name = "email"
+url = "mailto:hi@hadi7546.ir"
 
 [menu]
-  [[menu.main]]
-    identifier = "blog"
-    name       = "Blog"
-    url        = "https://blog.hadi7546.me"
-  [[menu.main]]
-    identifier = "resume"
-    name       = "Resume"
-    url        = "https://resume.hadi7546.me"
+[[menu.main]]
+identifier = "about"
+name = "About"
+url = "about/"
+
+[[menu.main]]
+identifier = "blog"
+name = "Blog"
+url = "https://blog.hadi7546.ir"
+
+[[menu.main]]
+identifier = "resume"
+name = "Resume"
+url = "https://resume.hadi7546.ir"
